--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "server",
+  "name": "expense-tracker-mern",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "description": "Backend for expense tracker",
   "scripts": {
-    "start": "node app",
-    "server": "nodemon app"
+    "start": "nodemon server.ts",
+    "server": "nodemon server.ts",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Saad Farhan",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
-    "concurrently": "^6.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.12.14",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.7"
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/color": "^3.0.3",
+    "@types/color-convert": "^2.0.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
+    "concurrently": "^6.2.0",
+    "nodemon": "^2.0.7",
+    "ts-node": "^10.8.2"
   }
 }
