--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "morgan": "^1.10.0",
     "concurrently": "^6.2.0",
     "nodemon": "^2.0.7",
-    "ts-node": "^10.8.2"
-  },
-  "devDependencies": {
+    "ts-node": "^10.8.2",
     "@types/body-parser": "^1.19.2",
     "@types/color": "^3.0.3",
     "@types/color-convert": "^2.0.0",
