--- a/package.json
+++ b/package.json
@@ -11,21 +11,17 @@
   "author": "Saad Farhan",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "colors": "^1.4.0",
+    "concurrently": "^6.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
-    "concurrently": "^6.2.0",
     "nodemon": "^2.0.7",
-    "ts-node": "^10.8.2",
-    "@types/body-parser": "^1.19.2",
-    "@types/color": "^3.0.3",
-    "@types/color-convert": "^2.0.0",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/morgan": "^1.9.3"
+    "ts-node": "^10.8.2"
   }
 }
