--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Go to client directory
-        run: cd client
+        run: cd client && ls
 
       - name: Install NodeJS
         uses: actions/setup-node@v3
