--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Go to client directory
-        run: cd client && ls
+        run: cd client
 
       - name: Install NodeJS
         uses: actions/setup-node@v3
@@ -35,7 +35,7 @@ jobs:
           cmd: install # will run `yarn install` command
 
       - name: Build React App
-        run: yarn build
+        run: yarn run build
 
       - name: Install Surge
         run: npm install --global surge
