--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,9 @@ on:
   pull_request:
     branches: [master]
 
+env:
+  REACT_APP_SERVER_URL: ${{ secrets.SERVER_URL }}
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
