--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
-    "ts-node": "^10.8.2"
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   }
 }
