--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,9 +25,6 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      - name: Go to client directory
-        run: cd client && cat package.json
-
       - name: Install NodeJS
         uses: actions/setup-node@v3
         with:
@@ -35,13 +32,13 @@ jobs:
 
       - uses: borales/actions-yarn@v3.0.0
         with:
-          cmd: install # will run `yarn install` command
+          cmd: cd client && install # will run `yarn install` command
 
       - name: Build React App
-        run: npm build
+        run: cd client && npm build
 
       - name: Install Surge
-        run: npm install --global surge
+        run: cd client && npm install --global surge
 
       - name: Deploy to Surge
-        run: surge ./build expense-tracker-ts-mern.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+        run: cd client && surge ./build expense-tracker-ts-mern.surge.sh --token ${{ secrets.SURGE_TOKEN }}
