--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
+      - name: Go to the client directory
+        run: cd client
+
       - name: Install NodeJS
         uses: actions/setup-node@v3
         with:
@@ -35,10 +38,10 @@ jobs:
           cmd: install # will run `yarn install` command
 
       - name: Build React App
-        run: cd client && npm build
+        run: npm build
 
       - name: Install Surge
-        run: cd client && npm install --global surge
+        run: npm install --global surge
 
       - name: Deploy to Surge
-        run: cd client && surge ./build expense-tracker-ts-mern.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+        run: surge ./build expense-tracker-ts-mern.surge.sh --token ${{ secrets.SURGE_TOKEN }}
