--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,12 +30,12 @@ jobs:
         with:
           node-version: 12
 
-      - uses: borales/actions-yarn@v3.0.0
-        with:
-          cmd: install # will run `yarn install` command
+      - name: Install dependencies
+        run: npm i
+        working-directory: client
 
       - name: Build React App
-        run: npm build
+        run: yarn build
         working-directory: client
 
       - name: Install Surge
